Datos de contacto intoducidos

--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,11 @@
 </head>
 
 <body>
-    <p> Un comentario </p>
+    <ul>
+        <li>Telefono:</li>
+        <li>Direccion:</li>
+        <li>email:</li>
+    </ul>
 </body>
 
 </html>
